# aisopod

./: .dockerignore  .gitignore  AUDIT_REPORT.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUE_164_VERIFICATION_REPORT.md  README.md  aisopod-config.json5  aisopod-sessions.db  apchat.md  audit_results.json  citations.txt  clippy_detailed.txt  crates_unsafe_analysis.json  docker-compose.yml  fly.toml  fmt_issues.txt  issue-097-findings.md  learnings.md  learnings1.md  render.yaml  security_audit_report.json  teloxide_0_12_api_research.md  teloxide_message_properties_report.md  test_edition  test_edition2  test_output.txt  unsafe_patterns_report.json
crates/aisopod-agent/: Cargo.toml
crates/aisopod-agent/src/: abort.rs  binding.rs  compaction.rs  context_guard.rs  failover.rs  lib.rs  memory.rs  pipeline.rs  prompt.rs  resolution.rs  runner.rs  skills_integration.rs  subagent.rs  transcript.rs  types.rs  usage.rs
crates/aisopod-agent/tests/: abort.rs  compaction.rs  failover.rs  helpers.rs  mod.rs  pipeline.rs  prompt.rs  resolution.rs  subagent.rs  transcript.rs  usage.rs
crates/aisopod-channel/: Cargo.toml
crates/aisopod-channel-discord/: Cargo.toml
crates/aisopod-channel-discord/src/: connection.rs  embeds.rs  features.rs  lib.rs  media.rs  receive.rs  send.rs
crates/aisopod-channel-googlechat/: Cargo.toml
crates/aisopod-channel-googlechat/src/: api.rs  auth.rs  cards.rs  channel.rs  config.rs  lib.rs  webhook.rs
crates/aisopod-channel-imessage/: Cargo.toml
crates/aisopod-channel-imessage/src/: applescript.rs  bluebubbles.rs  channel.rs  config.rs  lib.rs  platform.rs
crates/aisopod-channel-imessage/tests/: integration.rs
crates/aisopod-channel-irc/: Cargo.toml
crates/aisopod-channel-irc/src/: auth.rs  channel.rs  client.rs  config.rs  lib.rs
crates/aisopod-channel-lark/: Cargo.toml
crates/aisopod-channel-lark/src/: api.rs  auth.rs  cards.rs  channel.rs  config.rs  events.rs  lib.rs
crates/aisopod-channel-line/: Cargo.toml
crates/aisopod-channel-line/src/: api.rs  auth.rs  channel.rs  config.rs  flex.rs  lib.rs  webhook.rs
crates/aisopod-channel-matrix/: Cargo.toml
crates/aisopod-channel-matrix/src/: channel.rs  client.rs  config.rs  encryption.rs  lib.rs
crates/aisopod-channel-mattermost/: Cargo.toml
crates/aisopod-channel-mattermost/src/: api.rs  auth.rs  channel.rs  config.rs  lib.rs  websocket.rs
crates/aisopod-channel-msteams/: Cargo.toml
crates/aisopod-channel-msteams/src/: adaptive_cards.rs  auth.rs  botframework.rs  channel.rs  config.rs  lib.rs  webhook.rs
crates/aisopod-channel-msteams/tests/: integration_tests.rs
crates/aisopod-channel-nextcloud/: Cargo.toml
crates/aisopod-channel-nextcloud/src/: api.rs  channel.rs  config.rs  files.rs  lib.rs  polling.rs
crates/aisopod-channel-nostr/: Cargo.toml
crates/aisopod-channel-nostr/src/: channel.rs  config.rs  events.rs  keys.rs  lib.rs  nip04.rs  relay.rs
crates/aisopod-channel-signal/: Cargo.toml
crates/aisopod-channel-signal/src/: channel.rs  config.rs  gateway.rs  lib.rs  outbound.rs  runtime.rs
crates/aisopod-channel-slack/: Cargo.toml
crates/aisopod-channel-slack/src/: blocks.rs  connection.rs  features.rs  lib.rs  media.rs  receive.rs  send.rs  socket_mode.rs
crates/aisopod-channel-slack/tests/: test_outbound.rs
crates/aisopod-channel-telegram/: Cargo.toml
crates/aisopod-channel-telegram/src/: features.rs  lib.rs  media.rs  send.rs
crates/aisopod-channel-tests/: Cargo.toml
crates/aisopod-channel-tests/tests/: common.rs  tier2_integration.rs  tier3_integration.rs
crates/aisopod-channel-twitch/: Cargo.toml
crates/aisopod-channel-twitch/src/: auth.rs  badges.rs  channel.rs  config.rs  lib.rs  tmi.rs
crates/aisopod-channel-utils/: Cargo.toml
crates/aisopod-channel-utils/src/: error_mapping.rs  lib.rs  markdown.rs  media.rs  rate_limit.rs  retry.rs
crates/aisopod-channel-whatsapp/: Cargo.toml
crates/aisopod-channel-whatsapp/src/: connection.rs  lib.rs  media.rs  receive.rs  send.rs  webhook.rs
crates/aisopod-channel-zalo/: Cargo.toml
crates/aisopod-channel-zalo/src/: api.rs  auth.rs  channel.rs  config.rs  lib.rs  webhook.rs
crates/aisopod-channel/src/: adapters.rs  channel.rs  lib.rs  media.rs  message.rs  plugin.rs  router.rs  security.rs  types.rs
crates/aisopod-channel/tests/: mod.rs  test_media.rs  test_registry.rs  test_router.rs  test_security.rs
crates/aisopod-client/: Cargo.toml
crates/aisopod-client/src/: client.rs  error.rs  lib.rs  message.rs  types.rs
crates/aisopod-client/tests/: integration_test.rs
crates/aisopod-config/: Cargo.toml
crates/aisopod-config/examples/: debug_deserialize.rs  debug_json5.rs
crates/aisopod-config/src/: env.rs  generate.rs  includes.rs  lib.rs  loader.rs  sensitive.rs  validation.rs  watcher.rs
crates/aisopod-config/tests/: env_substitution.rs  load_json5.rs  load_toml.rs  parsing.rs  validation.rs
crates/aisopod-gateway/: Cargo.toml  build.rs
crates/aisopod-gateway/src/: audit.rs  auth.rs  broadcast.rs  client.rs  lib.rs  routes.rs  server.rs  static_files.rs  tls.rs  ws.rs
crates/aisopod-gateway/tests/: integration.rs  security_integration.rs  static_files_test.rs  tls_test.rs  ui_integration.rs
crates/aisopod-memory/: Cargo.toml
crates/aisopod-memory/src/: embedding.rs  integration.rs  lancedb.rs  lib.rs  management.rs  pipeline.rs  sqlite.rs  store.rs  types.rs
crates/aisopod-memory/tests/: test_integration.rs  test_management.rs  test_search.rs  test_storage.rs
crates/aisopod-plugin/: Cargo.toml
crates/aisopod-plugin/src/: abi.rs  api.rs  builtin.rs  command.rs  commands.rs  config.rs  context.rs  dynamic.rs  hook.rs  lib.rs  manifest.rs  meta.rs  registry.rs  security.rs  trait.rs
crates/aisopod-plugin/tests/: integration.rs
crates/aisopod-provider/: Cargo.toml
crates/aisopod-provider-anthropic/: Cargo.toml
crates/aisopod-provider-anthropic/src/: lib.rs
crates/aisopod-provider/src/: auth.rs  discovery.rs  helpers.rs  lib.rs  normalize.rs  registry.rs  trait_module.rs  types.rs
test_issue_077/: Cargo.toml
test_issue_077/src/: test_issue_077.rs
(+787 files in other folders)
