[workspace]
resolver = "2"
members = ["crates/aisopod-shared", "crates/aisopod-config", "crates/aisopod-provider", "crates/aisopod-tools", "crates/aisopod-session", "crates/aisopod-memory", "crates/aisopod-agent"]

[workspace.package]
edition = "2024"
name = "aisopod"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
