[workspace]
resolver = "2"
members = ["crates/aisopod-plugin", "crates/aisopod-shared", "crates/aisopod-config", "crates/aisopod-provider", "crates/aisopod-tools", "crates/aisopod-session", "crates/aisopod-memory", "crates/aisopod-agent", "crates/aisopod-channel", "crates/aisopod-gateway", "crates/aisopod"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
async-trait = "0.1"
