[workspace]
resolver = "2"
members = ["crates/aisopod-plugin", "crates/aisopod-shared", "crates/aisopod-config", "crates/aisopod-provider", "crates/aisopod-tools", "crates/aisopod-session", "crates/aisopod-memory", "crates/aisopod-agent", "crates/aisopod-channel", "crates/aisopod-gateway", "crates/aisopod", "crates/aisopod-channel-telegram", "crates/aisopod-channel-discord", "crates/aisopod-channel-whatsapp", "crates/aisopod-channel-slack"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
semver = "1"
toml = "0.8"
