[package]
name = "aisopod-channel-discord"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-config = { path = "../aisopod-config" }
aisopod-shared = { path = "../aisopod-shared" }
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
