[package]
name = "aisopod-channel-googlechat"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
axum = { version = "0.7", features = ["json", "macros", "macros"] }
http = "1.1"
url = { workspace = true }
jsonwebtoken = "9.3"
base64 = "0.22"
reqwest = { workspace = true }
serde_urlencoded = "0.1"
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
mockall = "0.13"
