[package]
name = "aisopod-channel-lark"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
axum = { version = "0.7", features = ["json"] }
tokio-stream = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile.workspace = true
