[package]
name = "aisopod-channel-line"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-config = { path = "../aisopod-config" }
aisopod-shared = { path = "../aisopod-shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
url.workspace = true
reqwest.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
futures-core.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
