[package]
name = "aisopod-channel-matrix"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-shared = { path = "../aisopod-shared" }
aisopod-config = { path = "../aisopod-config" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
url = "2"
matrix-sdk = { version = "0.8", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
rpassword = "7"
tokio-util = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["matrix-sdk/e2e-encryption"]
