[package]
name = "aisopod-channel-mattermost"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.24"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = []
