[package]
name = "aisopod-channel-nextcloud"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-config = { path = "../aisopod-config" }
aisopod-shared = { path = "../aisopod-shared" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }
async-trait.workspace = true
chrono.workspace = true
url = "2"
reqwest.workspace = true
futures-util.workspace = true
bytes = "1.5"
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
