[package]
name = "aisopod-channel-twitch"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-shared = { path = "../aisopod-shared" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
tracing = { workspace = true }
thiserror = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = "0.6"
