[package]
name = "aisopod-channel"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-shared = { path = "../aisopod-shared" }
aisopod-session = { path = "../aisopod-session" }
aisopod-agent = { path = "../aisopod-agent" }
aisopod-config = { path = "../aisopod-config" }
aisopod-tools = { path = "../aisopod-tools" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rand = "0.8"
