[package]
name = "aisopod-channel"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-shared = { path = "../aisopod-shared" }
aisopod-session = { path = "../aisopod-session" }
aisopod-agent = { path = "../aisopod-agent" }
aisopod-config = { path = "../aisopod-config" }
aisopod-tools = { path = "../aisopod-tools" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = "0.2"
wiremock = "0.6"
axum = { version = "0.7", features = ["macros", "json"] }
reqwest = { version = "0.12", features = ["json"] }
