[package]
name = "aisopod-config"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-shared = { path = "../aisopod-shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
json5 = "0.4"
toml = "0.8"
regex = "1"
notify = "6"
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tempfile.workspace = true
