[package]
name = "aisopod-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-config = { path = "../aisopod-config" }
aisopod-shared = { path = "../aisopod-shared" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tower-http = { version = "0.5", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
base64 = "0.21"
