[package]
name = "aisopod-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-config = { path = "../aisopod-config" }
aisopod-shared = { path = "../aisopod-shared" }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
base64 = "0.21"
dashmap = "5.5"
rust-embed = "8.0"
mime_guess = "2.0"
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

[dev-dependencies]
rcgen = "0.13"
tracing-test = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
futures = "0.3"
url = "2.5"
