[package]
name = "aisopod-memory"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-shared = { path = "../aisopod-shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sqlite-vec = { version = "0.1.7-alpha.10" }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
