[package]
name = "aisopod-memory"
version.workspace = true
edition.workspace = true

[features]
default = []
lancedb = ["dep:lancedb", "arrow-schema", "arrow-array", "futures-util"]

[dependencies]
aisopod-shared = { path = "../aisopod-shared" }
aisopod-provider = { path = "../aisopod-provider" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sqlite-vec = { version = "0.1.7-alpha.10" }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
lancedb = { version = "0.15", optional = true }
arrow-schema = { version = "53", optional = true }
arrow-array = { version = "53", optional = true }
arrow-data = { version = "53", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.10"
