[package]
name = "aisopod-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
aisopod-channel = { path = "../aisopod-channel" }
aisopod-provider = { path = "../aisopod-provider" }
aisopod-shared = { path = "../aisopod-shared" }
aisopod-tools = { path = "../aisopod-tools" }
anyhow.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
