[package]
name = "aisopod-provider-anthropic"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
aisopod-provider = { path = "../aisopod-provider" }
aisopod-shared = { path = "../aisopod-shared" }
anyhow.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
